Fix alignment of superscript elements
Squashed commit of the following:

commit 43c0dd4f7732c29304525377553973fac3202f00
Author: Mario Pabon <me@mariopabon.com>
Date:   Wed Nov 2 12:08:27 2016 -0400

    Fix alignment of superscript elements

Fix alignment of superscript elements

--- a/styles/pup/base/_typography.scss
+++ b/styles/pup/base/_typography.scss
@@ -52,3 +52,7 @@ p {
     margin-bottom: 0;
   }
 }
+
+sup {
+  vertical-align: super;
+}
